implement cloudinary to image upload

--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,8 @@ PORT=3000
 HOST_API=localhost:3000/api
 
 JWT_SECRET_KEY=MY_SECRET_KEY
+
+# Cloudinary
+CLOUD_NAME=
+CLOUD_API_KEY=
+CLOUD_API_SECRET=
